D8CORE-3682: Fixed word wrapping on long menu titles

--- a/src/scss/components/multi-menu/_multi-menu.scss
+++ b/src/scss/components/multi-menu/_multi-menu.scss
@@ -280,6 +280,8 @@
 
           @include padding(null 0 2.4rem 1rem);
           @include margin(0 1.8em 0 0.5rem);
+          max-width:90%;
+          word-wrap:break-word;
 
           &::before {
             left: -6px;
